# BALRoGO

./: .flake8  .gitignore  .gitlab-ci.yml  GAIA.md  LICENSE  Makefile  README.md  fit_pm.py  pyproject.toml
balrogo/: __init__.py  angle.py  dynamics.py  fit_pm.py  gaia.py  hrd.py  marginals.py  mock.py  parallax.py  pm.py  position.py
docs/source/: conf.py  index.rst
docs/source/code/: gaia.rst
input_ex/: X.txt  Y.txt
samples/: SCULPTOR.fits  sample.py
scripts/: build.sh  format.sh  lint.sh  poetry-wrapper.sh  test.sh
tests/: test_balrogo.py
