[tool.poetry]
name = "balrogo"
version = "1.6.4"
description = "Bayesian Astrometric Likelihood Recovery of Galactic Objects"
authors = ["Eduardo Vitral <vitral@iap.fr>", "Alexandre Macedo <arj.macedo@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/eduardo-vitral/balrogo"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.5"
matplotlib = "^3.1.2"
astropy = "^5.0"
scipy = "^1.4.1"
shapely = "^1.6.4"
emcee = "^3.0.2"
numdifftools = "^0.9.39"
importlib_metadata = { version = "^3.3.0", python = "<3.8" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = { version = "*", allow-prereleases = true }
flake8-black = "^0.2.1"
pytest-cov = "^2.10.1"
toml = "^0.10.2"
sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
m2r2 = "^0.2.7"
mistune = "<=0.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
