[tool.poetry]
name = "balrogo"
version = "1.8.2"
description = "Bayesian Astrometric Likelihood Recovery of Galactic Objects"
authors = ["Eduardo Vitral <vitral@iap.fr>", "Alexandre Macedo <arj.macedo@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/eduardo-vitral/balrogo"

[tool.poetry.dependencies]
python = ">=3.10, <=3.12"
numpy = "^1.21"
matplotlib = "^3.5.0"
astropy = "^5.0"
scipy = "^1.8.0"
shapely = "^1.8.0"
emcee = "^3.1.1"
numdifftools = "^0.9.39"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-black = "^0.3.6"
setuptools = "^75.8.0"
sphinx = "^5.3.0"
m2r2 = "^0.3.1"
pytest = "^7.0"
black = "^23.1.0"
pytest-cov = "^3.0.0"
toml = "^0.10.2"
sphinx-rtd-theme = "^1.0.0"
mistune = "<=0.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
